直播课创建 修改样式

--- a/app/src/main/res/layout/activity_audit.xml
+++ b/app/src/main/res/layout/activity_audit.xml
@@ -14,8 +14,8 @@
             android:layout_height="wrap_content"
             android:text="@string/audit_allowed"
             android:background="@color/white"
-            android:textSize="@dimen/font_28px"
-            android:textColor="@color/font_gray"
+            android:textSize="@dimen/font_30px"
+            android:textColor="@color/font_black"
             android:paddingLeft="@dimen/px32"
             android:paddingTop="@dimen/px28"
             android:paddingBottom="@dimen/px28"
@@ -61,10 +61,9 @@
 
             <TextView
                     android:id="@+id/audit_select"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:gravity="center_vertical|right"
+                    android:layout_height="match_parent"
                     android:drawablePadding="@dimen/px22"
                     android:text="@string/please_select"
                     android:textColor="@color/font_light_gray"
