--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <style name="AppBaseTheme" parent="android:Theme.Light"></style>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
@@ -7,12 +8,14 @@
         <item name="android:windowAnimationStyle">@style/ActAnimationStyle</item>
         <item name="android:windowNoTitle">true</item>
     </style>
+
     <style name="ActAnimationStyle" mce_bogus="1" parent="@android:style/Animation.Activity">
         <item name="android:activityOpenEnterAnimation">@anim/base_act_anim_enter</item>
         <item name="android:activityOpenExitAnimation">@anim/base_act_anim_exit</item>
         <item name="android:activityCloseEnterAnimation">@anim/base_act_back_enter</item>
         <item name="android:activityCloseExitAnimation">@anim/base_act_back_exit</item>
     </style>
+
     <style name="CommonDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
@@ -22,30 +25,36 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:gravity">center</item>
     </style>
+
     <style name="BottomSheetAnim" parent="android:Animation">
         <item name="android:windowEnterAnimation">@anim/slide_in_from_bottom</item>
         <item name="android:windowExitAnimation">@anim/slide_out_to_bottom</item>
     </style>
+
     <style name="DividerHorizontal">
         <item name="android:background">@color/hor_divide_line</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/px1</item>
     </style>
+
     <style name="DividerHorizontal2">
         <item name="android:background">@color/hor_divide_line2</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/px1</item>
     </style>
+
     <style name="DividerHorizontal3">
         <item name="android:background">@color/hor_divide_line3</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/px1</item>
     </style>
+
     <style name="DividerVertical">
         <item name="android:background">@color/ver_divide_line</item>
         <item name="android:layout_width">@dimen/px1</item>
         <item name="android:layout_height">match_parent</item>
     </style>
+
     <style name="BigSubmitBtn">
         <item name="android:background">@drawable/big_submit_btn_selector</item>
         <item name="android:layout_width">match_parent</item>
@@ -55,6 +64,7 @@
         <item name="android:textColor">#ffffff</item>
         <item name="android:gravity">center</item>
     </style>
+
     <style name="MinePageItem">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -73,32 +83,64 @@
 
 
     <!--live lesson detail-->
-    <style name="LiveLessonTextView">
-        <item name="android:paddingTop">@dimen/px34</item>
-        <item name="android:paddingBottom">@dimen/px34</item>
-        <item name="android:textSize">@dimen/font_26px</item>
+    <style name="LessonText">
+        <item name="android:paddingTop">@dimen/px32</item>
+        <item name="android:paddingBottom">@dimen/px32</item>
+        <item name="android:textSize">@dimen/font_30px</item>
+    </style>
+
+    <style name="LessonItem">
+        <item name="android:paddingLeft">@dimen/px32</item>
+        <item name="android:paddingRight">@dimen/px32</item>
+    </style>
+
+    <style name="LiveLessonTextView" parent="LessonText">
+        <item name="android:textSize">@dimen/font_30px</item>
         <item name="android:textColor">@color/font_gray</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
-    <style name="LiveLessonItem">
+
+    <style name="LiveLessonItem" parent="LessonItem">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingLeft">@dimen/px32</item>
-        <item name="android:paddingRight">@dimen/px32</item>
         <item name="android:background">@color/white</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:orientation">horizontal</item>
     </style>
-    <style name="LiveLessonTitle">
+
+    <style name="LiveLessonTitle" parent="LessonText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">@dimen/px170</item>
-        <item name="android:paddingTop">@dimen/px34</item>
-        <item name="android:paddingBottom">@dimen/px34</item>
-        <item name="android:textSize">@dimen/font_26px</item>
+        <item name="android:textSize">@dimen/font_30px</item>
         <item name="android:textColor">@color/font_black</item>
     </style>
+
+    <style name="LiveLessonCreateTitle" parent="LiveLessonTitle">
+        <item name="android:minWidth">@dimen/px160</item>
+    </style>
+
+    <style name="LiveLessonCreateEdt" parent="LessonText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/font_30px</item>
+        <item name="android:textColor">@color/font_gray</item>
+        <item name="android:background">@null</item>
+        <item name="android:lines">1</item>
+    </style>
+
+    <style name="LiveLessonRightEntrance" parent="LessonText">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/font_gray</item>
+        <item name="android:drawableRight">@drawable/ic_entrance</item>
+        <item name="android:drawablePadding">@dimen/px22</item>
+        <item name="android:gravity">right</item>
+        <item name="android:lines">1</item>
+    </style>
+
     <style name="LiveLessonText" parent="LiveLessonTextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
