--- a/app/src/main/res/layout/fragment_my_course.xml
+++ b/app/src/main/res/layout/fragment_my_course.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.handmark.pulltorefresh.AutoPullToRefreshListView
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/listview"
-        android:orientation="vertical"
-        android:dividerHeight = "0dp"
-        android:divider="@android:color/transparent"
-        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-</com.handmark.pulltorefresh.AutoPullToRefreshListView>
+    <com.handmark.pulltorefresh.AutoPullToRefreshListView
+
+            android:id="@+id/listview"
+            android:orientation="vertical"
+            android:dividerHeight="0dp"
+            android:divider="@android:color/transparent"
+            android:scrollbars="none"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </com.handmark.pulltorefresh.AutoPullToRefreshListView>
+
+    <include
+            android:id="@+id/hover"
+            android:visibility="gone"
+            layout="@layout/layout_my_course_search"/>
+
+</RelativeLayout>
