--- a/app/src/main/res/layout/layout_block_tab.xml
+++ b/app/src/main/res/layout/layout_block_tab.xml
@@ -19,7 +19,6 @@
                 android:textStyle="bold"
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
-                android:text="123"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -29,21 +28,40 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/font_blue"
                 android:textSize="@dimen/font_26px"
-                android:text="123"
                 android:layout_marginRight="@dimen/px30"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"/>
 
-        <com.benyuan.xiaojs.ui.widget.TabIndicatorView
-                android:id="@+id/block_tab"
-                android:layout_gravity="center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_centerInParent="true"
+        <RelativeLayout
+                android:id="@+id/block_tab_bar"
                 android:layout_toRightOf="@id/block_title"
                 android:layout_toLeftOf="@id/block_fun"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginRight="@dimen/px30"
-                android:layout_height="wrap_content"/>
+                android:layout_centerInParent="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                <com.benyuan.xiaojs.ui.widget.BottomLineTextView
+                        android:id="@+id/block_tab1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@drawable/orange_common_selector"
+                        android:textSize="@dimen/font_26px"/>
+
+                <com.benyuan.xiaojs.ui.widget.BottomLineTextView
+                        android:id="@+id/block_tab2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/px90"
+                        android:textColor="@drawable/orange_common_selector"
+                        android:textSize="@dimen/font_26px"/>
+            </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 
     <View
