--- a/app/src/main/res/layout/layout_person_block_item.xml
+++ b/app/src/main/res/layout/layout_person_block_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:orientation="vertical"
+             android:background="@drawable/white_grey_selector"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -27,6 +27,7 @@
                 android:textColor="@color/font_black"
                 android:layout_marginTop="@dimen/px15"
                 android:maxLines="1"
+                android:maxEms="4"
                 android:textStyle="bold"
                 android:ellipsize="end"
                 android:layout_gravity="center_horizontal"
@@ -40,6 +41,7 @@
                 android:textColor="@color/common_text"
                 android:layout_gravity="center_horizontal"
                 android:maxLines="1"
+                android:maxEms="4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
